welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:4: error: value foreach is not a member of Int
  for (i<- getMondeLargeur())
                          ^Array1:7: error: value Length is not a member of Array[java.awt.Color]
    for (i<-creationTableau().Length)
                              ^Array1:9: error: type mismatch;
 found   : Array[java.awt.Color]
 required: java.awt.Color
      peindre(remplirTableau(i))
                            ^Array1:18: error: not found: value hauteur
  hauteur = getMondeHauteur()
  ^Array1:19: error: not found: value hauteur
  var T = new Array[Color] (hauteur)
                            ^Array1:25: error: value foreach is not a member of Int
  for (i<- getMondeHauteur())
                          ^